<resources>
    <string name="app_name">Meal Planner</string>
    <string name="minus_icon">Minus Icon</string>
    <string name="plus_icon">Plus Icon</string>
    <string name="add_button">Add</string>
    <string name="id_title">Id</string>
    <string name="name_title">Name</string>
    <string name="quantity_title">Quantity</string>
    <string name="measure_title">Measure</string>
    <string name="expiration_title">Expiration Date</string>
    <string name="delete_icon">Delete Icon</string>
    <string name="edit_icon">Edit Icon</string>
    <string name="expiration_hint">dd/mm/yy</string>
    <string name="ing_hint">Ingredient name</string>
    <string name="quan_hint">0</string>
    <string name="sort_alpha">A</string>
    <string name="sort_exp">E</string>
    <string name="empty_message">Oops. It looks like your list is empty! Press
        the red button on the bottom right to add new product.</string>
    <string name="title_img_in_home">In home</string>
    <string name="title_img_ing">In home</string>
    <string name="choose_def_meas">Choose measure</string>
    <string name="minus_1">-1</string>
    <string name="plus_1">+1</string>
    <string name="is_it_new">Is it new?</string>
    <string name="ingredients">Ingredients:</string>
    <string name="instructions">Instructions</string>
    <string name="recipes_list">Recipes List</string>
    <string name="add_to_shop">Add missing ingredients to shopping list</string>
    <string name="shopping_list">Shopping list</string>
    <string name="end_shopping">End shopping</string>
    <string name="clear_shop_list">Clear shopping list</string>
    <string name="empty_shop_list">Shopping list is empty</string>
</resources>
