<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".AddATHomeActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/ad_ing"
        tools:layout_editor_absoluteX="8dp"
        android:contentDescription="@string/title_img_in_home"
        android:background="#FFF"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <AutoCompleteTextView
            android:id="@+id/auto_comp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/ing_hint"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"/>

        <Button
            android:id="@+id/button1"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/minus_icon"
            android:onClick="minus"
            android:text="@string/minus_1"/>

        <EditText
            android:id="@+id/button_tester"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:background="@android:color/transparent"
            android:inputType="numberDecimal"
            android:layout_gravity="center_vertical"
            android:paddingTop="4dp"
            android:layout_margin="8dp"
            android:hint="@string/quan_hint"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:text="@string/plus_1"
            android:contentDescription="@string/plus_icon"
            android:onClick="plus" />

        <EditText
            android:id="@+id/expiration_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/expiration_hint"
            android:inputType="date"
            android:maxLength="8"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <CheckBox
            android:id="@+id/is_new_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="show"
            android:text="@string/is_it_new"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="16dp"/>

        <LinearLayout
            android:id="@+id/placeholder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_button"
        android:layout_gravity="center"
        android:onClick="insert"/>

</LinearLayout>